--- a/parksnap_front/public/index.html
+++ b/parksnap_front/public/index.html
@@ -29,7 +29,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
   />
   
-    <title>React App</title>
+    <title>Park Snap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
